--- a/KolonyCloudFunctions/functions/package.json
+++ b/KolonyCloudFunctions/functions/package.json
@@ -1,26 +1,27 @@
 {
   "name": "functions",
-  "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "eslint .",
-    "serve": "firebase emulators:start --only functions",
-    "shell": "firebase functions:shell",
+    "lint": "tslint --project tsconfig.json",
+    "build": "tsc",
+    "serve": "npm run build && firebase emulators:start --only functions",
+    "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
+  "engines": {
+    "node": "8"
+  },
+  "main": "lib/index.js",
   "dependencies": {
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
-    "stripe": "^8.31.0"
+    "stripe": "^8.32.0"
   },
   "devDependencies": {
-    "eslint": "^5.12.0",
-    "eslint-plugin-promise": "^4.0.1",
+    "tslint": "^5.12.0",
+    "typescript": "^3.2.2",
     "firebase-functions-test": "^0.1.6"
   },
-  "private": true,
-  "engines": {
-    "node": "8"
-   }
+  "private": true
 }
