--- a/KolonyCloudFunctions/functions/package.json
+++ b/KolonyCloudFunctions/functions/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
+    "minimist": "^1.2.5",
     "stripe": "^8.32.0"
   },
   "devDependencies": {
